package com.example.order;

public enum OrderStatus {
    NEW,
    PAID
}
